--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import-normalize; /* bring in normalize.css styles */
-
+:root{
+  --primary-color: rgb(52, 112, 255);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
